[Harpreet] feat : updated controller mapper dto